--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                 <img id="link-preview-image" src="" alt="Link preview">
                                 <div class="image-loading">
                                     <div class="loading-spinner"></div>
-                                    <p>Generating preview...</p>
+                                    
                                 </div>
                             </div>
                         </div>
@@ -93,7 +93,7 @@
                             </div>
                             <div class="ai-disclaimer">
                                 <i class="fas fa-exclamation-triangle"></i>
-                                <p>AI-generated content may contain inaccuracies. Verify critical information.</p>
+                                <p>!!AI REVIEW FEATURE STILL UNDER DEVELOPMENT!!<br>AI-generated review can contain misinformation.</p>
                             </div>
                             <div id="ai-response" class="ai-response">
                                 <div class="thinking">
@@ -204,10 +204,10 @@
         <div class="footer-content">
             <div class="footer-info">
                 <h3>NexusLink</h3>
-                <p>Premium Link Management System</p>
+                <p>Premium Link Library Management System</p>
                 <div class="footer-meta">
                     <span>© <span class="year"></span> All Rights Reserved</span>
-                    <span>Developed with <i class="fas fa-heart"></i> by You</span>
+                    <span>Developed with <i class="fas fa-heart"></i> by Ceyneth</span>
                 </div>
             </div>
             <div class="footer-links">
@@ -230,5 +230,6 @@
 
 
 </body>
+
 
 </html>
