--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                             </div>
                             <p id="expanded-description" class="expanded-desc">Description will appear here...</p>
                             <div class="link-image-preview">
+                                <div id="link-preview-image"></div>
                                 <img id="link-preview-image" src="" alt="Link preview">
                                 <div class="image-loading">
                                     <div class="loading-spinner"></div>
@@ -233,3 +234,4 @@
 
 
 </html>
+
