--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
                         <div class="ai-assistant">
                             <div class="ai-header">
                                 <i class="fas fa-robot"></i>
-                                <h3>AI Assistant</h3>
+                                <h3>AI Review</h3>
                             </div>
                             <div class="ai-disclaimer">
                                 <i class="fas fa-exclamation-triangle"></i>
-                                <p>!!AI REVIEW FEATURE STILL UNDER DEVELOPMENT!!<br>AI-generated review can contain misinformation.</p>
+                                <p>!!! AI REVIEW FEATURE STILL UNDER DEVELOPMENT !!!<br>AI-generated review can contain misinformation.</p>
                             </div>
                             <div id="ai-response" class="ai-response">
                                 <div class="thinking">
@@ -234,4 +234,5 @@
 
 
 </html>
+
 
