--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
     <script src="https://js.puter.com/v2/"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,10 +11,6 @@
 </head>
 
 <body>
-
-    <script src="https://js.puter.com/v2/"></script>
-
-
     <!-- Animated Background -->
     <div class="bg-bubbles">
         <div class="bubble x1"></div>
@@ -57,8 +52,6 @@
                 <!-- Links will be dynamically inserted here -->
             </section>
 
-
-
             <!-- Expanded Link View -->
             <div class="expanded-view-overlay">
                 <div class="expanded-view glass-panel">
@@ -78,12 +71,10 @@
                                 </a>
                             </div>
                             <p id="expanded-description" class="expanded-desc">Description will appear here...</p>
-                            <div class="link-image-preview">
-                                <div id="link-preview-image"></div>
-                                <img id="link-preview-image" src="" alt="Link preview">
+                            <div id="link-preview-image" class="link-image-preview">
                                 <div class="image-loading">
                                     <div class="loading-spinner"></div>
-                                    
+                                    <p>Loading image...</p>
                                 </div>
                             </div>
                         </div>
@@ -113,8 +104,6 @@
                     </div>
                 </div>
             </div>
-
-
         </main>
     </div>
 
@@ -193,13 +182,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
-
-
-
-
-
-
     <!-- Footer -->
     <footer class="glass-footer">
         <div class="footer-content">
@@ -208,10 +190,15 @@
                 <p>Premium Link Library Management System</p>
                 <div class="footer-meta">
                     <span>© <span class="year"></span> All Rights Reserved</span>
-                    <span>Developed with <i class="fas fa-heart"></i> by Ceyneth</span>
+                    <span>Developed with <i class="fas fa-heart"></i> by 
+                        <a href="https://github.com/yourusername" target="_blank" class="developer-link">
+                            <img src="https://github.com/yourusername.png" alt="Ceyneth" class="developer-pfp">
+                            Ceyneth
+                        </a>
+                    </span>
                 </div>
             </div>
-            <div class="footer-links">
+            <div class="footer-suggest">
                 <p>Want to suggest a useful link?</p>
                 <a href="https://wa.me/yournumber" class="glass-button whatsapp-btn" target="_blank">
                     <i class="fab fa-whatsapp"></i> Contact Developer
@@ -225,14 +212,6 @@
         </div>
     </footer>
 
-
-
-
-
-
+    <script src="script.js"></script>
 </body>
-
-
 </html>
-
-
