--- a/index.html
+++ b/index.html
@@ -189,17 +189,18 @@
                 <h3>NexusLink</h3>
                 <p>Premium Link Library Management System</p>
                 <div class="footer-meta">
-                    <span>© <span class="year"></span> All Rights Reserved</span>
-                    <span>Developed with <i class="fas fa-heart"></i> by 
-                        <a href="https://github.com/yourusername" target="_blank" class="developer-link">
-                            <img src="https://github.com/yourusername.png" alt="Ceyneth" class="developer-pfp">
+                    <span>© <span class="year"></span> All Rights Reserved</span><p> | </p>
+                    <span>Developed by</span>
+						<span>
+                        <a href="https://github.com/CnetBuilds" target="_blank" class="developer-link">
+                            <img src="https://avatars.githubusercontent.com/u/143874354?v=4" alt="CnetBuilds" class="developer-pfp">
                             Ceyneth
                         </a>
                     </span>
                 </div>
             </div>
             <div class="footer-suggest">
-                <p>Want to suggest a useful link?</p>
+                <p>Want to suggest a useful link?</p><span style="display:block; height:8px;"></span>
                 <a href="https://wa.me/yournumber" class="glass-button whatsapp-btn" target="_blank">
                     <i class="fab fa-whatsapp"></i> Contact Developer
                 </a>
@@ -215,3 +216,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
