--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://js.puter.com/v2/"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NexusLink - Premium Link Manager</title>
+    <title>NexusLink - Premium Link Library</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -85,7 +85,7 @@
                             </div>
                             <div class="ai-disclaimer">
                                 <i class="fas fa-exclamation-triangle"></i>
-                                <p>!!! AI REVIEW FEATURE STILL UNDER DEVELOPMENT !!!<br>AI-generated review can contain misinformation.</p>
+                                <p>!!! <b>AI REVIEW</b> FEATURE STILL UNDER DEVELOPMENT !!!<br>AI-generated review can contain misinformation.</p>
                             </div>
                             <div id="ai-response" class="ai-response">
                                 <div class="thinking">
@@ -158,7 +158,7 @@
 
             <div class="tab-content" id="manage-links">
                 <div class="link-list">
-                    <!-- Links will be listed here for management -->
+                    <!-- Link listings -->
                 </div>
             </div>
 
@@ -187,21 +187,21 @@
         <div class="footer-content">
             <div class="footer-info">
                 <h3>NexusLink</h3>
-                <p>Premium Link Library Management System</p>
+                <p><b>Premium</b> Link Library Netwok</p>
                 <div class="footer-meta">
                     <span>© <span class="year"></span> All Rights Reserved</span><p> | </p>
                     <span>Developed by</span>
 						<span>
                         <a href="https://github.com/CnetBuilds" target="_blank" class="developer-link">
                             <img src="https://avatars.githubusercontent.com/u/143874354?v=4" alt="CnetBuilds" class="developer-pfp">
-                            Ceyneth
+                            CnetBuilds
                         </a>
                     </span>
                 </div>
             </div>
             <div class="footer-suggest">
                 <p>Want to suggest a useful link?</p><span style="display:block; height:8px;"></span>
-                <a href="https://wa.me/yournumber" class="glass-button whatsapp-btn" target="_blank">
+                <a href="https://wa.me/+9472814215" class="glass-button whatsapp-btn" target="_blank">
                     <i class="fab fa-whatsapp"></i> Contact Developer
                 </a>
             </div>
@@ -216,4 +216,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
